// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It can render 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<button
  class="typography-linkReset-1 typography-chevron-link-2"
  data-id="chevron-button"
>
  <div
    class="c0"
    style="margin-left: -8px; margin-top: 0px; margin-bottom: 0px; height: 24px;"
  >
    <svg
      class=""
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </div>
  <span
    class="typography-body-variant-basekick-3 typography-neutral-color-4 typography-regular-weight-5 typography-strong-support-6 -span c1"
    data-id="text"
  >
    Chevron link
  </span>
</button>
`;

exports[`It can render another tone 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<button
  class="typography-linkReset-8 typography-chevron-link-9"
  data-id="chevron-button"
>
  <div
    class="c0"
    style="margin-left: -8px; margin-top: 0px; margin-bottom: 0px; height: 24px;"
  >
    <svg
      class=""
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </div>
  <span
    class="typography-body-variant-basekick-10 typography-neutral-color-11 typography-regular-weight-12 typography-strong-support-13 -span c1"
    data-id="text"
  >
    Chevron button
  </span>
</button>
`;
